[package]
name = "libresplit-converter"
license = "GPL-3.0-or-later"
authors = [
  "Jack Tench",
  "wins1ey <wins1ey at wins1ey dot win>"
]
repository = "https://github.com/LibreSplit/LibreSplit-converter"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spex = "0.2.2"
